# moondance

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Pipfile  README.md  build.py  conanfile.py
bs/templates/: build.ninja.jinja
include/moondance/: test.h  util.h  version.h  version.h.in
scripts/: MoondanceConfig.cmake.in  build.bat  build.sh  create-package.bat  create-package.sh  install.cmake  target.cmake  test.cmake
src/: test.c
test/: test.c
test_package/: CMakeLists.txt  conanfile.py  main.c
